--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>ig_lio</name>
+  <name>ig_loc</name>
   <version>0.0.0</version>
-  <description>The ig_lio package</description>
+  <description>The ig_loc package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
